fix(style): un overflow: visible provoquait l'apparition intempestive des barre de scroll en lecture.

--- a/src/client/assets/javascripts/features/displayManagement/displayManagement.scss
+++ b/src/client/assets/javascripts/features/displayManagement/displayManagement.scss
@@ -24,7 +24,7 @@ $primary-color: #f1f1f1;
 #displayManagementLayout .ant-layout-content {
   padding: 0px 5px 0 0;
   display: block;
-  overflow-x: visible;
+  overflow: hidden;
 }
 
 .ant-collapse-content > .ant-collapse-content-box {
